Initiallösung fertig. Fahrzeugumläufe zusammengelegt und Ladestationen gebaut.